added scripts to process questions data including posting and dreturning data [Delivers #160647085 #160646968]

--- a/frontend/home.html
+++ b/frontend/home.html
@@ -47,7 +47,7 @@
             </form>
         </div>
     </div>
-    <script src="scripts/addquestion.js"></script>
+    <script src="scripts/questions.js"></script>
 </body>
 
 </html>
