--- a/frontend/askedqns.html
+++ b/frontend/askedqns.html
@@ -23,9 +23,8 @@
         <div class="user-profile">
             <input type="submit" value="User Profile ..">
             <p class="profile-heading" id="profile-heading"></p>
+
             <p><a href="home.html">All Questions</a> </p>
-            <p id=askedqns><a href="askedqns.html">My Questions</a></p>
-            <!-- <p><a href="qnanswer.html">Ans Given (2)</a> </p> -->
 
             <p onclick="Logout()"><a href="#">Log Out</a></p>
         </div>
@@ -36,12 +35,11 @@
                 <button type="submit">Post Question</button>
             </form>
 
-            <div id="allQuestions" class="all-quetions">
+            <div id="Questions" class="all-quetions">
             </div>
         </div>
         <div class="question-content">
-            <div id="asked-qn"></div>
-            <!-- <button id="delete" type="submit">delete</button> -->
+            <div id="asked-qn"></div><button id="delete" type="submit">delete</button>
             <div id="answers-sector">
                 <p>Click on a question to view or add an answer to it.</p>
             </div>
@@ -50,9 +48,11 @@
                 <button type="submit">Submit answer</button>
             </form>
         </div>
-    </div>
-    <script src="scripts/questions.js"></script>
 
+    </div>
+
+    <script src="scripts/questions.js"></script>
+    <script src="scripts/askedqns.js"></script>
 </body>
 
 </html>
