--- a/frontend/home.html
+++ b/frontend/home.html
@@ -36,13 +36,13 @@
                 <button type="submit">Post Question</button>
             </form>
 
-            <div id="allQuestions" class="all-quetions">
+            <div id="allQuestions" class="fixed-questions">
             </div>
         </div>
         <div class="question-content">
             <div id="asked-qn"></div>
             <!-- <button id="delete" type="submit">delete</button> -->
-            <div id="answers-sector">
+            <div id="answers-sector" class="fixed-answers">
                 <p>Click on a question to view or add an answer to it.</p>
             </div>
             <form action="" id="postanswer">
