--- a/frontend/update_answer.html
+++ b/frontend/update_answer.html
@@ -9,6 +9,11 @@
 </head>
 
 <body>
+    <header class="header">
+        <h1>
+            StackOverflow-lite
+        </h1>
+    </header>
     <div class="editanswerbody">
 
         <p>Edit and submit answer:</p>
@@ -17,9 +22,14 @@
             <input type="text" id="answertxt" value="" autofocus>
             <input type="submit" value="Submit">
         </form>
-        <p id="showanswer"></p>
-        <button onclick="Accept()">Accept this answer</button>
+        <div class="answer-body">
+            <h3 id="showanswer"></h3>
+
+            <button onclick="Accept()">Accept this answer</button>
+        </div>
+
     </div>
+
 
 </body>
 </div>
