--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -48,7 +48,7 @@
                 let email = document.getElementById('email').value;
                 let password = document.getElementById('userpassword').value;
 
-                fetch('http://127.0.0.1:5000/api/v1/auth/signup', {
+                fetch('https://stackoverflow-lite-v1-frontend.herokuapp.com/api/v1/auth/signup', {
                         method: 'POST',
                         headers: {
                             'Accept': 'application/json, text/plain, */*',
