--- a/frontend/askedqns.html
+++ b/frontend/askedqns.html
@@ -39,7 +39,8 @@
             </div>
         </div>
         <div class="question-content">
-            <div id="asked-qn"></div><button id="delete" type="submit">delete</button>
+            <div id="asked-qn"></div><button onclick="deleteqn()" type="submit">delete</button>
+            <!-- <button id="delete" type="submit">delete</button> -->
             <div id="answers-sector">
                 <p>Click on a question to view or add an answer to it.</p>
             </div>
