added sweetalert plugin to modify and customise application feedback [Finishes #160785395]

--- a/frontend/home.html
+++ b/frontend/home.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StackOverflow-lite</title>
-
-
+    <script src="scripts/sweetalert2/sweetalert2.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/promise-polyfill"></script>
 </head>
 
 <body>
