--- a/frontend/login.html
+++ b/frontend/login.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StackOverflow-lite</title>
+    <script src="scripts/sweetalert2/sweetalert2.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/promise-polyfill"></script>
 </head>
 
 <body>
@@ -64,10 +66,18 @@
                 if ("Token" in data) {
                     localStorage.setItem("access_token", data.Token);
                     localStorage.setItem("name", display_name);
-                    alert(data.msg);
-                    window.location.href = 'home.html'
+                    swal({
+                        text: data.msg
+                    }).then(function() {
+                        window.location.href = 'home.html'
+                    });
+
                 } else {
-                    alert(data.error);
+                    swal({
+                        type: 'error',
+                        title: 'Oops...',
+                        text: data.error
+                    });
                 }
             })
 
